# DMS-RTOS-VCU

./: .mxproject  CMakeLists.txt  CompilationInstructions.txt  DMS-24-RTOS-VCU.ioc  Makefile  README.md  STM32F407VGTx_FLASH.ld
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: adc.c  app_main.c  app_main.h  dac.c  freertos.c  gpio.c  i2c.c  i2s.c  main.c  sensor_control.c  sensor_control.h  sensor_input.c  sensor_input.h  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c  usb_otg.c
Core/User/: LIS3DSH.c  LIS3DSH.h  app_main.c  dms_defines.h  dms_logging.c  dms_logging.h  sensor_control.c  sensor_control.h
USB_DEVICE/App/: usbd_cdc_if.c
USB_HOST/App/: usb_host.c
cmake/stm32cubemx/: CMakeLists.txt
